ajustes classe PetService alteração na properties